--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,8 +50,11 @@ markdown_extensions:
   - pymdownx.details
   - attr_list
   - md_in_html
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
 extra:
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/yourusername/netsimweb
+      link: https://github.com/michelangelomo/netsim-web
