--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "@types/uuid": "^10.0.0",
+        "@vitest/coverage-v8": "^4.0.15",
         "eslint": "^9",
         "eslint-config-next": "15.1.0",
         "jsdom": "^27.3.0",
